# geo-bevy

./: Cargo.toml
src/: build_mesh.rs  lib.rs  line_string.rs  point.rs  polygon.rs
tests/: geometry_to_mesh.rs
