[package]
name = "geo-bevy"
description = "Generate Bevy meshes from `geo` types"
version = "2.0.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2021"
repository = "https://github.com/frewsxcv/geo-bevy"
license = "MIT OR Apache-2.0"

[dependencies]
bevy-earcutr = "0.12"
bevy = { version = "0.13", default-features = false,  features = ["bevy_render"] }
geo = "0.27"
